--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+#server.port=8080
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/liquibase-changeLog.xml
