--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=8081
 spring.datasource.url=jdbc:h2:mem:library_test_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=axwell
@@ -6,3 +6,6 @@ spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/liquibase-changeLog.xml
